# shopy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  alembic.ini  compose.yaml  pyproject.toml
src/: main.py  run_server.py
src/core/: app.py  configuration.py  run_server.py
src/core/db/: __init__.py  core.py  mixins.py
src/core/db/migrations/: env.py
src/core/db/migrations/versions/: 641c0d167236_create_product_table.py  d36144dfcf36_create_cart_table.py
src/server/: __init__.py
src/server/products/: dependencies.py  router.py  schemas.py  utils.py
src/shop/: model.py  models.py
src/shop/cart/: exceptions.py
src/shop/cart/domain/: __init__.py  entities.py  value_objects.py
src/shop/cart/infrastracture/: builders.py  repository.py
src/shop/product/: dto.py  entity.py  exceptions.py  value_objects.py
src/shop/product/domain/: __init__.py  entity.py  value_objects.py
src/shop/product/infrastructure/: __init__.py  repository.py  uow.py
src/shop/product/use_cases/: __init__.py  use_cases.py
src/tests/: conftest.py  mocks.py  test_product_use_cases.py
src/tests/e2e/: conftest.py  test_product_api.py
src/tests/units/: test_cart.py  test_cart_repository.py  test_money.py  test_product.py  test_product_repository.py  test_produtcs_in_cart.py  test_quantity.py
