[tool.poetry]
name = "shopy"
version = "0.1.0"
description = ""
authors = ["web-lizzard <czarnous.adrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"

[tool.poetry.group.core.dependencies]
pydantic = "^2.6.4"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"


[tool.poetry.group.backend.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
