[tool.poetry]
name = "shopy"
version = "0.1.0"
description = ""
authors = ["web-lizzard <czarnous.adrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"

[tool.poetry.group.core.dependencies]
pydantic = "^2.6.4"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
pydantic-settings = "^2.2.1"
greenlet = "^3.0.3"
alembic = "^1.13.1"


[tool.poetry.group.backend.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.23.5.post1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
